--- a/TutorEd/css/normalize.css
+++ b/TutorEd/css/normalize.css
@@ -1,7 +1,6 @@
-/*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 /**
- * 1. Set default font family to sans-serif.
- * 2. Prevent iOS and IE text size adjust after device orientation change,
+ * Seting default font family to sans-serif.
+ * Preventing iOS and IE text size adjust after device orientation change,
  *    without disabling user zoom.
  */
 html {
@@ -18,14 +17,7 @@ html {
 body {
   margin: 0;
 }
-/* HTML5 display definitions
-   ========================================================================== */
-/**
- * Correct `block` display not defined for any HTML5 element in IE 8/9.
- * Correct `block` display not defined for `details` or `summary` in IE 10/11
- * and Firefox.
- * Correct `block` display not defined for `main` in IE 11.
- */
+
 article,
 aside,
 details,
@@ -235,8 +227,6 @@ select {
  * 2. Correct inability to style clickable `input` types in iOS.
  * 3. Improve usability and consistency of cursor style between image-type
  *    `input` and others.
- * 4. CUSTOM FOR WEBFLOW: Removed the input[type="submit"] selector to reduce
- *    specificity and defer to the .w-button selector
  */
 button,
 html input[type="button"],
@@ -292,9 +282,8 @@ input[type='number']::-webkit-outer-spin-button {
   height: auto;
 }
 /**
- * 1. CUSTOM FOR WEBFLOW: changed from `textfield` to `none` to normalize iOS rounded input
- * 2. CUSTOM FOR WEBFLOW: box-sizing: content-box rule removed
- *    (similar to normalize.css >=4.0.0)
+ * 1. Changed from `textfield` to `none` to normalize iOS rounded input
+ * 2. Box-sizing: content-box rule removed
  */
 input[type='search'] {
   -webkit-appearance: none;
@@ -335,7 +324,6 @@ textarea {
 }
 /**
  * Don't inherit the `font-weight` (applied by a rule above).
- * NOTE: the default cannot safely be changed in Chrome and Safari on OS X.
  */
 optgroup {
   font-weight: bold;
